--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -30,6 +30,13 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="zoomLink">Personal Zoom Meeting Room Link</label>
+        <input type="text" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.zoomLink.errors }" />
+        <div *ngIf="submitted && f.zoomLink.errors" class="invalid-feedback">
+            <div *ngIf="f.zoomLink.errors.required">Zoom Link is required</div>
+        </div>
+    </div>
+    <div class="form-group">
         <button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Register
