--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -22,6 +22,13 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="zoomLink">Personal Zoom Meeting Link</label>
+        <input type="text" formControlName="zoomLink" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.zoomLink.errors }" />
+        <div *ngIf="submitted && f.zoomLink.errors" class="invalid-feedback">
+            <div *ngIf="f.zoomLink.errors.required">Zoom Link is required</div>
+        </div>
+    </div>
+    <div class="form-group">
         <label for="password">Password</label>
         <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
