--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,7 @@
+<div class="jumbotron">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
@@ -22,3 +26,7 @@
         <a routerLink="/register" class="btn btn-link">Register</a>
     </div>
 </form>
+</div>
+</div>
+</div>
+</div>
