--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+.background-water {
+    background: url('assets/images/backgroundhome.jpeg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    color: white;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+ }
+
+
+ .center-block {
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+ }
+
+ .text-center {
+    text-align:center
+ }
+
