--- a/src/app/nav-buttons-home/nav-buttons-home.component.css
+++ b/src/app/nav-buttons-home/nav-buttons-home.component.css
@@ -31,7 +31,7 @@
 
   .img__overlay {
     background-color: rgba(46,204,113,0.4);
-    background: linear-gradient(65deg, rgba(46,204,113,0.4), rgba(243,156,18,0.4));
+    background: linear-gradient(65deg, rgba(236, 122, 45, 0.445), rgba(243,156,18,0.4));
     color: #fafafa;
     font-size: 24px;
   }
