--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,6 +4,7 @@
         <div class="row">
             <div class="col-md-12">
 <h2>Register</h2>
+<alert></alert>
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="firstName">First Name</label>
