--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!--Bootstrap Dropdown Search Bar Settings-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+     
+    <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+    <script type="text/javascript" src="bootstrap-multiselect.js"></script>
+
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
@@ -14,6 +22,7 @@
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -51,7 +60,59 @@
                     </div>
                 </div>
             </nav>
+
+            <!--Adjust the min and max value to the min being today and the max up to one-year ahead -->
+            <!---Pull from JSON for Participant names-->
+
+            <div class="container">
+                <div class="row justify-content-center">
+                    Start Connecting
+                </div>
+                <div class="row justify-content-center">    
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <label for="people">People: </label>
+                            <select id="multiselect" multiple="multiple">
+                                <option value="India">India</option>
+                                <option value="Australia">Australia</option>
+                                <option value="United State">United State</option>
+                                <option value="Canada">Canada</option>
+                                <option value="Taiwan">Taiwan</option>
+                                <option value="Romania">Romania</option>
+                            </select>
+                            <script>
+                                $(function() {  
+                                 $('#multiselect').multiselect({
+                                            includeSelectAllOption: true,
+                                            enableFiltering: true,
+                                            enableCaseInsensitiveFiltering: true,
+                                            filterPlaceholder: 'Search for something...'
+                                        }); 
+                                });
+                            </script>
+                        </div>
+                        <div class="col-sm-12">
+                            <label for="start">Date:</label>
+                                <input type="date" id="start" name="trip-start"  
+                                    value="2018-07-22"
+                                    min="2018-01-01" max="2020-12-31">
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="md-form md-outline">
+                                <label for="default-picker">Time:</label>
+                                <input type="time" id="default-picker" class="form-control" placeholder="Select time">
+                              </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            
         </div>
+
+        
+        
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
