Home screen / navbar work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,14 @@
-<!-- header -->
-<nav class="navbar navbar-expand navbar-dark bg-secondary" *ngIf="currentUser">
-    <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink="/user-profile">{{currentUser.firstName}} {{currentUser.lastName}}</a>
-        <a class="nav-item nav-link" routerLink="/">Home</a>
-        <a class="nav-item nav-link" (click)="logout()">Logout</a>
-        <a class="nav-item nav-link" routerLink="/journal">Journal</a>
-        <a class="nav-item nav-link" routerLink="/coffee-chat">Coffee Chat</a>
-        <a class="nav-item nav-link" routerLink="/mood-tracker">Mood Tracker</a>
-    </div>
-</nav>
-<!-- footer -->
-<footer class="page-footer bg-secondary fixed-bottom">
-    <div class="container text-center text-white mt-1">  
-        <h5>Creators</h5>
-        <h6>Maanasi Vadlamani |
-         Katie Duncan |
-         Emily Kelsey |
-         Shannon Campbell</h6>
-    </div>
-</footer>
+<!-- navbar -->
+<body>
+   
 
-<!-- main content container -->
+    <!-- main content container -->
+    <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
+    
+</body>
+
+
           
 
 
