--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,6 @@
     -o-background-size: cover;
  }
 
-
  .center-block {
     margin-left:auto;
     margin-right:auto;
@@ -18,3 +17,21 @@
     text-align:center
  }
 
+ .fancy-font {
+    font-family: 'Great Vibes', serif;
+    font-size: 68px;
+    color: #a4d4f0;
+ }
+ .reg-font{
+   font-family: 'Montserrat', serif;
+   color: #ffffff;
+ }
+
+.type-font{
+   font-family: 'Playfair Display', serif;
+   color: #ffffff;
+}
+
+.sticky-top{
+   width: 100% !important
+}
