--- a/src/app/nav-buttons-home/nav-buttons-home.component.html
+++ b/src/app/nav-buttons-home/nav-buttons-home.component.html
@@ -2,19 +2,19 @@
     <div class = "row">
         <div class="col-md-4">
             <a class="img center-block" href="#">
-                <div class="img__overlay">Coffee Chat</div>
+                <div class="img__overlay type-font">Coffee Chat</div>
                 <img src="assets/images/coffeebutton.jpeg"/>
             </a>
         </div>
         <div class="col-md-4">
             <a class="img center-block" href="#">
-                <div class="img__overlay">Mood Tracker</div>
+                <div class="img__overlay type-font">Mood Tracker</div>
                 <img src="assets/images/moodbutton.jpeg"/>
             </a>
         </div>
         <div class="col-md-4">
             <a class="img center-block" href="#">
-                <div class="img__overlay">Journal</div>
+                <div class="img__overlay type-font">Journal</div>
                 <img src="assets/images/journalbutton.jpeg"/>
             </a>
         </div>
