--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
  <!-- footer -->
- <footer class="page-footer" style="background: #7e8288">
+ <footer class="page-footer" style="background: #a5a5a5">
     <div class="container text-center text-white mt-1 type-font">  
         <p style="margin-top: 3; margin-bottom: 0;">Creators</p>
         <p>Maanasi Vadlamani |
