--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,39 +1,35 @@
 <body>
-    <nav class="navbar navbar-expand-md" style="background: #7e8288">
-        <a class="navbar-brand" href="#"><img src="assets/images/logo.jpg" alt="" width="80" height="60"></a>
+    <nav class="navbar navbar-expand-md" style="background: #a5a5a5">
+        <a class="navbar-brand" href="#"><img src="assets/images/logo transparent.png" alt="" width="80" height="60"></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
-            <span class="fa fa-bars"></span>
+            <span class="fa fa-bars" style="color: white"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbar" style="font-size: 18px;">
-            <ul class="navbar-nav">
-                <li class="nav-item nav-link">
-                    <a class="type-font" routerLink="/">HOME</a>
+        <div class="collapse navbar-collapse" id="navbar" style="font-size: 18px;">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link type-font hoverable" id="len1" routerLink="/">Home</a>
                 </li>
-                <li class="nav-item nav-link">
-                    <a class="type-font" routerLink="/journal">JOURNAL</a>
+                <li class="nav-item">
+                    <a class="nav-link type-font hoverable" id="len2" routerLink="/journal">Journal</a>
                 </li>
-                <li class="nav-item nav-link">
-                    <a class="type-font" routerLink="/coffee-chat">COFFEE CHAT</a>
+                <li class="nav-item">
+                    <a class="nav-link type-font hoverable" id="len3" routerLink="/coffee-chat">Coffee Chat</a>
                 </li>
-                <li class="nav-item nav-link">
-                    <a class="type-font" routerLink="/mood-tracker">MOOD TRACKER</a>
+                <li class="nav-item">
+                    <a class="nav-link type-font hoverable" id="len4" routerLink="/mood-tracker">Mood Tracker</a>
                 </li>
-                <li class="nav-item nav-link">
-                    <a class="type-font text-white" (click)="logout()">LOGOUT</a>
+                <li class="nav-item dropdown left-border-div">
+                    <a class="nav-link dropdown-toggle type-font hoverable" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="fa fa-user-circle mr-2 mt-1"></span>{{currentUser.firstName}} {{currentUser.lastName}}
+                    </a>
+                    <ul class="dropdown-menu type-font" aria-labelledby="navbarDropdown">
+                        <li class="dropdown-item" href="#" routerLink="/user-profile">Profile</li>
+                        <li class="dropdown-item" href="#">Contacts</li>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
+                    </ul>
                 </li>
             </ul>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="navbar" style="font-size: 18px;">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <a><span class="fa fa-user-circle mr-2 mt-1"></span>{{currentUser.firstName}} {{currentUser.lastName}}</a>
-                </button>
-                <div class="dropdown-menu">
-                    <div class="dropdown-item nav-item nav-link type-font">
-                        <div routerLink="/user-profile">Profile</div>
-                    </div>
-                </div>
-            </div>
         </div>
     </nav>
 </body>
