--- a/src/app/journal-prompt/journal-prompt.component.html
+++ b/src/app/journal-prompt/journal-prompt.component.html
@@ -19,6 +19,10 @@
 
 </head>
 
+<div class="sticky-top">
+    <app-navbar></app-navbar>
+</div>
+
 <body>
 
         <!-- Page Content Holder -->
@@ -53,6 +57,18 @@
                     </div>
                 </div>
             </nav>
+
+            <!--Actual Content-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-2"></div>
+                    <div class="col-8">
+                        <h4 class="text-center reg-font" style="color: black;">July 8, 2020</h4>
+                        <textarea rows="5" class="notes" placeholder="Begin entry here..." style="box-shadow: gray 5px;"></textarea>
+                    </div>
+                    <div class="col-2"></div>
+                </div>
+            </div>   
             
         
         </div>
