--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,7 +23,7 @@
                         <span class="fa fa-user-circle mr-2 mt-1"></span>{{currentUser.firstName}} {{currentUser.lastName}}
                     </a>
                     <ul class="dropdown-menu type-font" aria-labelledby="navbarDropdown">
-                        <li class="dropdown-item" href="#" routerLink="/user-profile">Profile</li>
+                        <li class="dropdown-item" routerLink="/user-profile">Profile</li>
                         <li class="dropdown-item" href="#">Contacts</li>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
