--- a/src/app/journal-free-write/journal-free-write.component.css
+++ b/src/app/journal-free-write/journal-free-write.component.css
@@ -46,4 +46,31 @@ ul.CTAs a {
     transition: all 0.3s;
 }
 
+/* ---------------------------------------------------
+    TEXTAREA STYLE
+----------------------------------------------------- */
+
+textarea {
+	resize: none !important;
+	overflow: auto !important;
+	outline: none;
+	box-shadow: none !important;
+    border-color: #ced4da !important;
+    }
+textarea:hover {
+		resize: none !important;
+		overflow: auto !important;
+		outline: none;
+		box-shadow: none !important;
+		border-color: #ced4da !important;
+    }
     
+.notes {
+	width: 99%;
+	height: 40em;
+	line-height: 31px;
+	background-image: -webkit-linear-gradient(left, white 0, transparent 0), -webkit-linear-gradient(right, white 0, transparent 0), -webkit-linear-gradient(white 30px, #ccc 30px, #ccc 31px, white 31px);
+	background-repeat: repeat-y;
+	background-size: 100% 100%, 100% 100%, 100% 31px;
+	background-attachment: local;
+}
