--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -19,13 +19,13 @@
 
 </head>
 <div>
-    <app-navbar class="mb-0"></app-navbar>
+    <app-navbar></app-navbar>
 </div>
 <body>
 
         <!-- Page Content Holder -->
     <div id="content">
-
+        <div class="jumbotron"></div>
             <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
                 <div class="container-fluid">
                     <a class="navbar-brand fancy-font" style="font-size: 45px;">Journal</a>
