--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <body>
-    <nav class="navbar navbar-expand-md" style="background: #a5a5a5">
+    <nav class="navbar navbar-expand-md" style="background: #a5a5a5; margin-bottom: 0px;">
         <a class="navbar-brand" href="#"><img src="assets/images/logo transparent.png" alt="" width="80" height="60"></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
             <span class="fa fa-bars" style="color: white"></span>
