--- a/src/app/journal-prompt/journal-prompt.component.html
+++ b/src/app/journal-prompt/journal-prompt.component.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<div class="sticky-top">
+<div>
     <app-navbar></app-navbar>
 </div>
 
@@ -28,8 +28,9 @@
         <!-- Page Content Holder -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
                 <div class="container-fluid">
+                    <a class="navbar-brand fancy-font" style="font-size: 45px;">Journal</a>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
