--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
@@ -19,40 +19,15 @@
 <div class="sticky-top">
     <app-navbar></app-navbar>
 </div>
+<div class="coffee-chat-navbar">
+    <app-coffee-chat-navbar></app-coffee-chat-navbar>
+</div>
 
 <body>
 
         <!-- Page Content Holder -->
         <div id="content">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="coffee-chat-upcoming-meetings">Upcoming Meetings</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="coffee-chat-pending-meetings">Pending Meetings</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="#new-meeting" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">New Meeting</a>
-                                <ul class="collapse list-unstyled" id="new-meeting">
-                                    <li>
-                                        <a href="coffee-chat-select-friends">Select Friends</a>
-                                    </li>
-                                    <li>
-                                        <a href="coffee-chat-random-friends">Randomly Generate Friends</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+            
             <h3>Upcoming Meetings</h3>
             <div class="row">
                     <div class="col-md-auto">
@@ -113,5 +88,7 @@
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
+
+<app-footer></app-footer>
 
 </html>
