--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -41,13 +41,11 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <label for="people">People: </label>
-                            <ng-multiselect-dropdown-angular7
-                                [data]="peopleList"
-                                [settings]="dropdownSettings"
-                                (onSelect)="onPersonSelect($event)"
-                                (onSelectAll)="onSelectAll($event)"
-                            >
-                            </ng-multiselect-dropdown-angular7>
+                            <select>
+                                <option *ngFor="let number of numberList">
+                                    {{number}}
+                                </option>
+                            </select>
                         </div>
                         <div class="col-sm-12">
                             <label for="start">Date:</label>
@@ -64,9 +62,6 @@
                     </div>
                 </div>
             </div>
-
-
-            
         </div>
 
         
