--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -41,13 +41,10 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <label for="people">People: </label>
-                            <ng-multiselect-dropdown-angular7
-                                [data]="peopleList"
-                                [settings]="dropdownSettings"
-                                (onSelect)="onPersonSelect($event)"
-                                (onSelectAll)="onSelectAll($event)"
-                            >
-                            </ng-multiselect-dropdown-angular7>
+                            <select>
+                                <option>
+                                </option>
+                            </select>
                         </div>
                         <div class="col-sm-12">
                             <label for="start">Date:</label>
