--- a/src/styles.css
+++ b/src/styles.css
@@ -55,6 +55,9 @@
 }
 
 
+
+
+
 /* ---------------------------------------------------
     NAVBAR STYLES
 ----------------------------------------------------- */
@@ -149,3 +152,9 @@
 
 
 
+/* ---------------------------------------------------
+    JOURNALING COMPONENT
+----------------------------------------------------- */
+textarea{
+  height: auto !important;
+}
