--- a/src/app/journal-prompt/journal-prompt.component.html
+++ b/src/app/journal-prompt/journal-prompt.component.html
@@ -28,7 +28,7 @@
         <!-- Page Content Holder -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
+            <nav class="navbar navbar-expand-lg" style="background-color: #dad8d8;">
                 <div class="container-fluid">
                     <a class="navbar-brand fancy-font" style="font-size: 45px;">Journal</a>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,16 +64,17 @@
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-8">
-                        <h4 class="text-center reg-font" style="color: black;">Describe a moment in your life that you are proud of.</h4>
-                        <h6 class="text-center reg-font" style="color: grey;">July 08, 2020</h6>
-                        <textarea rows="5" class="notes" placeholder="Begin entry here..." style="box-shadow: gray 5px;"></textarea>
+                        <h4 class="text-center reg-font" style="color: black;">Respond to a Prompt</h4>
+                        <textarea rows="2" class="notes text-center" placeholder="Prompt
+Date" ></textarea>
+                        <textarea rows="10" class="notes" placeholder="Begin entry here..."></textarea>
                     </div>
                     <div class="col-2"></div>
                 </div>
-            </div>   
+            </div>        
+        </div>
             
         
-        </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
