--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -26,7 +26,7 @@
         <div>
             <app-navbar></app-navbar>
         </div>
-            <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
+            <nav class="navbar navbar-expand-lg" style="background-color: #dad8d8;">
                 <div class="container-fluid">
                     <a class="navbar-brand fancy-font" style="font-size: 45px;">Journal</a>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
