--- a/src/app/nav-buttons-home/nav-buttons-home.component.html
+++ b/src/app/nav-buttons-home/nav-buttons-home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class = "row">
         <div class="col-md-4">
-            <a class="img center-block border-coffee" href="#">
+            <a class="img center border-coffee" href="#">
                 <div class="img__overlay type-font">Coffee Chat</div>
                 <img src="assets/images/coffeebutton.jpeg"/>
             </a>
