updated header, footer, and navbars for each component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,15 @@
     -o-background-size: cover;
  }
 
+ body{
+   display: flex;
+   flex-direction: column;
+   height: 100vh;
+   margin: 0;
+ }
+
+
+
 
 
  
