--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
-<!-- navbar -->
 <body>
-   
-
     <!-- main content container -->
     <router-outlet></router-outlet>
-
-    
 </body>
+<div id="footer">
+    <app-footer></app-footer>
+</div>
+
 
           
 
