--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -18,50 +18,16 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
 </head>
-
 <body>
+    <div class="sticky-top">
+        <app-navbar></app-navbar>
+        <app-journal-navbar></app-journal-navbar>
+    </div>
 
-        <!-- Page Content Holder -->
     <div class="journal" id="content">
-        <div>
-            <app-navbar></app-navbar>
-        </div>
-            <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
-                <div class="container-fluid">
-                    <a class="navbar-brand fancy-font" style="font-size: 45px;">Journal</a>
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link reg-font hoverable" href="journal-drafts">Drafts</a>
-                            </li>
-                            <li>
-                                <a class="nav-link reg-font hoverable" href="journal-published">Published</a>
-                            </li>
-                            <li>
-                                <a class="nav-link reg-font hoverable" href="#new-entry-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">New Entry</a>
-                                <ul class="collapse list-unstyled" id="new-entry-submenu">
-                                    <li>
-                                        <a href="journal-free-write">Free Write</a>
-                                    </li>
-                                    <li>
-                                        <a href="journal-prompt">Respond to a Prompt</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-
-            <div class="container">
-                <!--Button-->
-            <button class="button-choice reg-font" style="margin:40px" routerLink="/journal-free-write">Free Write</button>
-            <button class="button-choice reg-font" style="margin:40px" routerLink="/journal-prompt">Respond to a Prompt</button>
-            </div>
+        <!--Button-->
+        <button class="button-choice reg-font" style="margin:40px" routerLink="/journal-free-write">Free Write</button>
+        <button class="button-choice reg-font" style="margin:40px" routerLink="/journal-prompt">Respond to a Prompt</button>
     </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
@@ -71,6 +37,4 @@
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
-
-<app-footer></app-footer>
 </html>
