--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -16,38 +16,13 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
 </head>
-
-<div class="sticky-top">
-    <app-navbar></app-navbar>
-</div>
-
 <body>
-
+    <div class="sticky-top">
+        <app-navbar></app-navbar>
+        <app-user-profile-navbar></app-user-profile-navbar>
+    </div>
         <!-- Page Content Holder -->
         <div id="content">
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="user-profile-profile">Profile</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="user-profile-dashboard">Dashboard</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="user-profile-contacts">Contacts</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            
             
         </div>
 
