--- a/src/app/journal-free-write/journal-free-write.component.html
+++ b/src/app/journal-free-write/journal-free-write.component.html
@@ -64,11 +64,9 @@
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-8">
-                        <h4 class="text-center reg-font" style="color: black;">Free Writing</h4>
+                        <textarea rows="1" class="title text-center" style="margin-top: 50px" placeholder="Title"></textarea>
                         <h6 class="text-center reg-font" style="color: grey;">July 08, 2020</h6>
-                        <textarea rows="2" class="notes text-center" placeholder="Title
-Date" ></textarea>
-                        <textarea rows="10" class="notes" placeholder="Begin entry here..."></textarea>
+                        <textarea rows="20" class="notes" placeholder="Begin entry here..."></textarea>
                     </div>
                     <div class="col-2"></div>
                 </div>
