--- a/src/app/journal-free-write/journal-free-write.component.html
+++ b/src/app/journal-free-write/journal-free-write.component.html
@@ -60,18 +60,30 @@
             </nav>
             
             <!--Actual Content-->
+            <form [formGroup]="journalForm" (ngSubmit)="onSubmit()">
             <div class="container">
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-8">
+                        
                         <h4 class="text-center reg-font" style="color: black;">Free Writing</h4>
                         <h6 class="text-center reg-font" style="color: grey;">July 08, 2020</h6>
-                        <textarea rows="5" class="notes" placeholder="Begin entry here..." style="box-shadow: gray 5px;"></textarea>
+                        <div class="form-group">
+                            <textarea rows="5" formControlName="textEntry" class="notes" placeholder="Begin entry here..." style="box-shadow: gray 5px;"></textarea>
+                        </div>
+                        </div>
+                        <div class="col-2"></div>
                     </div>
-                    <div class="col-2"></div>
-                </div>
-            </div>        
-        </div>
+                    <div class="form-group">
+                        <button [disabled]="loading" class="btn btn-primary">
+                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                            Submit
+                        </button>
+                        <a routerLink="/journal" class="btn btn-link">Back to Journaling Options</a>
+                    </div>
+                </div>   
+            </form>     
+            </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
