Added backend for pulling journals

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
 <div class="sticky-top">
     <app-navbar></app-navbar>
 </div>
-<div class="container mt-5">
+<div class="container mt-5 center-block">
     <app-nav-buttons-home></app-nav-buttons-home>
 </div>
 <div class="container mt-4">
