--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,3 +7,10 @@
     background: linear-gradient(to right, white, #c0c1c2, #505152, #c0c1c2, white);
 }
 
+.center-block {
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+ }
+
+
