--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -60,7 +60,7 @@ ul.CTAs a {
 
 
 body{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+    /* background: -webkit-linear-gradient(left, #3931af, #00c6ff); */
 }
 .emp-profile{
     padding: 3%;
