--- a/src/app/journal-prompt/journal-prompt.component.html
+++ b/src/app/journal-prompt/journal-prompt.component.html
@@ -66,7 +66,7 @@
                         
                         <h4 class="text-center reg-font" style="color: black;">Respond to a Prompt</h4>
                          
-                        <textarea rows="2" class="notes text-center" placeholder="PromptDate" ></textarea>
+                        <h1>{{title}}</h1>
                    <div class="form-group">
                         <textarea rows="10" class="notes" formControlName="textEntry" placeholder="Begin entry here..."></textarea>
 
