--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -26,7 +26,7 @@
             <div class="col-sm-6 offset-sm-3">
                 <div class="md-form md-outline">
                     <alert></alert>
-                    <label for="default-picker">Enter Date For Which You Want To See:</label>
+                    <label for="default-picker">What Day's Data Do You Want To Load?</label>
     
                   </div>
             </div>
@@ -37,12 +37,28 @@
         </div>
     </div>
     <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
+        <div class="col-sm-1 offset-sm-8">
+            <button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Login
         </button>
+        </div>
     </div>
     </form>
+    <div class = "" *ngFor="let user of validJournal" >
+    <div id="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                <h2>Prompt: {{user.title}}</h2>
+                
+                <p>Entry: {{user.text}}</p>
+                <div class="line"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
         </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
