--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -26,9 +26,13 @@
 
     <div class="journal" id="content">
         <!--Button-->
-        <button class="button-choice reg-font text-white" style="margin:40px" routerLink="/journal-free-write">Free Write</button>
-        <button class="button-choice reg-font text-white" style="margin:40px" routerLink="/journal-prompt">Respond to a Prompt</button>
+        <button class="button-choice reg-font text-white" style="margin:3rem" routerLink="/journal-free-write">Free Write</button>
+        <button class="button-choice reg-font text-white" style="margin:3rem" routerLink="/journal-prompt">Respond to a Prompt</button>
     </div>
+        <app-footer></app-footer>
+    
+
+    
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
