--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
  <!-- footer -->
- <footer class="page-footer" style="background: #a5a5a5">
-    <div class="container text-center text-white mt-1 type-font">  
-        <p style="margin-top: 3; margin-bottom: 0;">Creators</p>
+ <footer class="page-footer" style="background: #a5a5a5; margin-bottom: 0 !important">
+    <div class="text-center text-white type-font">  
+        <p style="margin-top: 3; margin-bottom: 3;">Creators</p>
         <p>Maanasi Vadlamani |
         Katie Duncan |
         Emily Kelsey |
