--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
             <img src="assets/images/logo transparent.png" alt="" width="140" height="100">
             <p class="fancy-font" style="color: #A4D4F0; font-size: 68px">Meaningful Minutes</p>
             <div>
-                <hr style="background-color: #fff; width: 25%; height: 1px;"/> 
+                <hr class="divide"/> 
             </div>
             <p class="type-font" style="font-size: 20px; color: #fff">Connect and Reflect</p>
         </div>
