--- a/src/app/journal-published/journal-published.component.html
+++ b/src/app/journal-published/journal-published.component.html
@@ -19,14 +19,17 @@
 
 </head>
 <body>
+    <div>
+        <app-navbar style="z-index: 9999;"></app-navbar>
+    </div>
     <div class="sticky-top">
-        <app-navbar></app-navbar>
-        <app-journal-navbar></app-journal-navbar>
+        <app-journal-navbar style="z-index: 1;"></app-journal-navbar>
     </div>
         <!-- Page Content Holder -->
-        <div id="content">
+        <div class="journal" id="content">
         
         </div>
+    <app-footer></app-footer>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
