--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,6 @@
 .navbar {
     padding: 0;
+    z-index: 9999 !important;
 }
 
 .nav-item{
@@ -9,6 +10,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    z-index: 9999 !important;
 }
   
 .dropdown-menu{
@@ -16,12 +18,14 @@
     width: 30px !important;
     border: none !important;
     top: 56px !important;
-    position: absolute !important;
+    z-index: 9999 !important;
 }
 
 .dropdownitem{
     padding: 0;
+    z-index: 9999 !important;
 }
 .dropdown-item:hover{
     background-color: #9e9d9d;
+    z-index: 9999 !important;
 }
