--- a/src/styles.css
+++ b/src/styles.css
@@ -12,11 +12,12 @@
  }
 
  .journal{
-  background: url('assets/images/journal background.jpg') no-repeat center center fixed;
+  background: url('assets/images/journal backgound.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover; 
+  margin: 0;
  }
 
 .coffee-chat{
@@ -166,4 +167,24 @@
 ----------------------------------------------------- */
 textarea{
   height: auto !important;
+}
+
+
+/* ---------------------------------------------------
+    Dividers
+----------------------------------------------------- */
+
+hr.divide {
+  border: 0;
+  height: 2px;
+  width: 50vh;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), white, rgba(0, 0, 0, 0));
+}
+
+hr.blur {
+  height: 8px;
+  border: 0;
+  padding: 0px;
+  margin: 0px;
+  box-shadow: inset 0 12px 12px -12px #7ca8cf;
 }
