save meetings, dashboard added to nav, mood added to server schemas

--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -35,8 +35,9 @@
                 <form [formGroup]="createMeeting" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label for="people">People: </label>
-                        <select>
-                            <option *ngFor="let person of peopleList" [ngValue]="person">{{person}}</option>
+                
+                        <select multiple formControlName="people">
+                            <option *ngFor="let person of peopleList"  [ngValue]="person">{{person}}</option>
                         </select>
                     </div>
                     <div class="form-group">
