--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -39,7 +39,7 @@
     <div class="form-group">
         <button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Login
+            Find
         </button>
     </div>
     </form>
