--- a/src/app/mood-tracker/mood-tracker.component.css
+++ b/src/app/mood-tracker/mood-tracker.component.css
@@ -1,7 +1,7 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 @font-face{
     font-family: 'Big Caslon';
-    src: url('https://www.cssfontstack.com/Big-Caslon');
+    /* src: url('https://www.cssfontstack.com/Big-Caslon'); */
 }
 
 
