added registration fields and zoom meeting id pattern validation

--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -5,4 +5,15 @@ body {
     background-size: cover;
     -o-background-size: cover;
     height: 100%;
+    overflow-wrap: break-word;
   }
+  
+  .form-group{
+    width: 90px; height: 390px; padding: 5px;
+  }
+ 
+
+
+
+
+   
