--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -28,10 +28,31 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="zoomLink">Personal Zoom Meeting Link</label>
-        <input type="text" formControlName="zoomLink" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.zoomLink.errors }" />
+        <label for="zoomLink">Personal Zoom Meeting ID</label>
+        <input type="tel" formControlName="zoomLink" class="form-control" placeholder="123 456 7890" pattern="[0-9]{3} [0-9]{3} [0-9]{4}" [ngClass]="{ 'is-invalid': submitted && f.zoomLink.errors }" />
         <div *ngIf="submitted && f.zoomLink.errors" class="invalid-feedback">
-            <div *ngIf="f.zoomLink.errors.required">Zoom Link is required</div>
+            Zoom Meeting ID required in correct format
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="role">Role/Title</label>
+        <input type="text" formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }" />
+        <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
+            <div *ngIf="f.role.errors.required">Role/Title is required</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="bio">Brief Bio (max. 250 characters)</label>
+        <textarea ROWS="2" COLS="20" formControlName="bio" maxLength="250" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.hobbies.errors }"></textarea>
+        <div *ngIf="submitted && f.bio.errors" class="invalid-feedback">
+            <div *ngIf="f.bio.errors.required">Bio is required</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="Hobbies">Hobbies (separate by commas)</label>
+        <textarea ROWS="2" COLS="20" formControlName="hobbies" maxLength="100" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.hobbies.errors }"></textarea>
+        <div *ngIf="submitted && f.hobbies.errors" class="invalid-feedback">
+            <div *ngIf="f.hobbies.errors.required">Hobbies are required</div>
         </div>
     </div>
     <div class="form-group">
@@ -39,7 +60,6 @@
         <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
         </div>
     </div>
     <div class="form-group">
