--- a/src/app/user-profile-contacts/user-profile-contacts.component.html
+++ b/src/app/user-profile-contacts/user-profile-contacts.component.html
@@ -34,11 +34,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button [disabled]="loading" class="btn btn-primary">
+                    <button [disabled]="loading" class="btn btn-primary" routerLink="/user-profile-contacts">
                         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                         Add Friend
                     </button>
-                    <a routerLink="/" class="btn btn-link">Cancel</a>
+                    <a routerLink="/user-profile-contacts" class="btn btn-link">Cancel</a>
                 </div>
             </form>
         </div>
